Atualização no rodapé

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </section>
         <footer class="text-white text-center py-2 mt-4" style="background-color: #e15f41;">
             <div class="container">
-                <p class="mb-1 fw-bold">Tecnologia em Logística Avançada - tla.com.br - CNPJ: 22.224.845/0001-01</p>
+                <p class="mb-1 fw-bold">Tecnologia em Logística Avançada - Juliano Mozer 2024</p>
 
                 <p class="mb-0">Todos os direitos reservados © 2024</p>
                 <p></p>
