errumando espaçamento no campo de endereço e celular

--- a/index.html
+++ b/index.html
@@ -316,7 +316,8 @@
                             <p>
                                 <!-- Link para o endereço no Google Maps -->
                                 <a href="https://www.google.com/maps/place/R.+Maximiliano+Boscardin,+521+-+Fazendinha,+Curitiba+-+PR,+81330-500/@-25.489604,-49.3306887,17z/data=!3m1!4b1!4m6!3m5!1s0x94dce2de3bbc5b8f:0x77824f2e847c4794!8m2!3d-25.489604!4d-49.3281138!16s%2Fg%2F11c5j31qm9?entry=ttu&g_ep=EgoyMDI0MDkxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="text-decoration-none">
-                                    Rua Maximiliano Boscadin nº 521, Curitiba, PR, 81330-500 (41) 41 98463-1975
+                                    Rua Maximiliano Boscadin nº 521, <br>
+                                    Curitiba/PR, CEP 81330-500 (41) 98463-1975
                                 </a>
                             </p>
                         </div>
